5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1836_1274.log
== TEST (2019-06-24 12:52:50) 
-- CODE:
from numpy import*

n= int(input("Digite um numero: "))

mat = zeros((n,n), dtype = int)

for i in range(n):
	for j in range n: 
		if i > j:
			j = j + 1 
		elif i < j:
			i = i + 1
		elif i == j:
			i = i + 1
print(mat)
-- ERROR:
File "XXXX", line 8
    for j in range n: 
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:52:56) 
-- CODE:
from numpy import*

n= int(input("Digite um numero: "))

mat = zeros((n,n), dtype = int)

for i in range(n):
	
		if i > j:
			j = j + 1 
		elif i < j:
			i = i + 1
		elif i == j:
			i = i + 1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:54:41) 
-- CODE:
from numpy import*

n= int(input("Digite um numero: "))

mat = zeros((n,n), dtype = int)

for i in range(n):
	for j in range (n):
		if i > j:
			mat[i,j] = j +1
		elif i < j:
			mat[i,j] = i + 1
		elif i == j:
			mat[i,j] = i + 1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:54:45) 
-- CODE:
from numpy import*

n= int(input("Digite um numero: "))

mat = zeros((n,n), dtype = int)

for i in range(n):
	for j in range (n):
		if i > j:
			mat[i,j] = j +1
		elif i < j:
			mat[i,j] = i + 1
		elif i == j:
			mat[i,j] = i + 1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 12:54:52) 
-- CODE:
from numpy import*

n= int(input("Digite um numero: "))

mat = zeros((n,n), dtype = int)

for i in range(n):
	for j in range (n):
		if i > j:
			mat[i,j] = j +1
		elif i < j:
			mat[i,j] = i + 1
		elif i == j:
			mat[i,j] = i + 1
print(mat)
-- EXECUTION TIME:
1.21222
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:31:59) 
-- CODE:
from numpy import*

n= int(input("Digite um numero: "))

mat = zeros((n,n), dtype = int)

for i in range(n):
	for j in range (n):
		if i > j:
			mat[i,j] = j +1
		elif i < j:
			mat[i,j] = i + 1
		elif i == j:
			mat[i,j] = i + 1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
